# WorkAgent

./: .env.example  .gitignore  README.md  __init__.py  pyproject.toml  requirements.txt  server.py
api/: __init__.py  routes.py
budget/: __init__.py  manager.py
config/: __init__.py  config.yaml  loader.py
core/: __init__.py  agent.py  context.py  hooks.py  types.py
examples/: config_demo.py  core_modules_demo.py  simple_agent.py  skills_and_context_demo.py
llm/: __init__.py  router.py
llm/providers/: __init__.py  openai.py
observability/: __init__.py  tracing.py
security/: __init__.py  guard.py  tenant.py
skills/: __init__.py  presets.py  registry.py
tools/: __init__.py  builtin.py  registry.py
ui/: .gitignore  DESIGN_OPTIMIZATION.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js
ui/src/: App.tsx  index.css
ui/src/components/layout/: AppLayout.tsx  RightPanel.tsx  Sidebar.tsx
ui/src/components/ui/: animated.tsx  sheet.tsx
ui/src/hooks/: useAgent.ts
ui/src/pages/: AgentPage.tsx  ChatPage.tsx
ui/src/types/: agent.ts
workflow/: __init__.py  engine.py
